added controller structure

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "mongodb":"*",
     "nunjucks":"*",
     "mongoose":"*",
+    "connect-mongo":"*",
+    "connect-flash":"*",
     "nodemon":"*"
 
   }
