--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.12.4",
     "cookie-parser": "^1.3.5",
     "express": "^4.12.4",
-    "glob": "^5.0.7",   
+    "glob": "^5.0.7",
+    "mocha": "^2.2.5",
     "nunjucks": "^1.3.4"
   }
 }
