--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "scripts": {
     
+  },  
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tarex/WolverineJS.git"
   },
   "keywords": [
     "nodeJS",
@@ -18,7 +22,6 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.12.4",
     "glob": "^5.0.7",
-    "mocha": "^2.2.5",
     "nunjucks": "^1.3.4"
   }
 }
